tests/NormalTests/paczka1/fuzzy1/86685645.err
Error in line 8: cid S31 97,5
Error in line 7: 0XC S288 233,5
Error in line 27: 0XC S288 9,7
Error in line 32: 2HYC8 A7"6 94,"
Error in line 29: BzsW S265 0,5
